<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_name_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_id_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_dob_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_blood_group_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_phone_number_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_state_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_district_hint"/>
        <EditText
            style="@style/customEdittext"
            android:hint="@string/enter_the_address_hint"/>

    </LinearLayout>

</ScrollView>